jwt aut ajustes y logs para ver en render